# agent-workbench

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
agents/agentic-audit/: agent.md
bootstrap/: agent-workbench.ps1  agent-workbench.sh
commands/: audit.md
docs/: capabilities.md
docs/plans/: 2026-03-16-third-party-registry-design.md
docs/workbench-design/: 01-directory-structure.md  02-skills-spec.md  03-agentic-audit-spec.md  04-install-spec.md  05-registry-spec.md  06-templates-spec.md
examples/minimal-consumer/: agent_assets.yaml
registry/: plugins.md  skills.lock.json  skills.md  third-party-skills.md
scripts/: list-visible-skills.ps1
skills/first_party/agent-workbench-manager/: SKILL.md
skills/first_party/init-project-context/: SKILL.md  usage-examples.md
skills/first_party/planning-with-files/: SKILL.md
skills/import-third-party-skill/: SKILL.md
skills/import-third-party-skill/scripts/: import-third-party-skill.ps1  import-third-party-skill.sh
skills/init-project-context/: SKILL.md  usage-examples.md
skills/planning-with-files/: SKILL.md
skills/third_party.lock/: third_party.lock.yaml
skills/verify-registry-state/: SKILL.md
skills/verify-registry-state/scripts/: verify-registry-state.ps1  verify-registry-state.sh
skills/wt-dev/: SKILL.md
skills/wt-plan/: SKILL.md
skills/wt-pm/: SKILL.md
src/agent_workbench/: __init__.py  cli.py  manifest.py  rendering.py  syncer.py
templates/: CLAUDE.md.tpl
tests/: install.ps1  list-visible-skills.ps1  test_bootstrap_cli.py  test_manifest.py
(+14 files in other folders)
